# ai_hub

ai-trip-planner/: .env  .gitignore  main.py  pyproject.toml  requirements.txt  setup.py
ai-trip-planner/agent/: agentic_workflow.py
ai-trip-planner/config/: config.yaml
ai-trip-planner/notebooks/: test.ipynb
ai-trip-planner/utils/: model_loader.py
health-chatbot/: .gitignore  .python-version  README.md  main.py  pyproject.toml  requirements.txt  setup.py  streamlit_app.py
health-chatbot/agent/: agent_routes.py  agentic_workflow.py  cardiologist_agent.py  pediatrics_agent.py  reception_agent.py
health-chatbot/config/: config.yaml
health-chatbot/notebooks/: test.ipynb
health-chatbot/prompt_library/: prompt.py
health-chatbot/tools/: vanna_tool.py
health-chatbot/utils/: graph_utils.py  model_loader.py
langgraph_demo/: .env  .gitignore  drafter.py  first_agent.py  main.py
langgraph_demo/notebooks/: chroma.sqlite3  excercise_1.ipynb  excercise_2.ipynb  health-bot.ipynb  insert_medical_data.ipynb  patients.db  test.ipynb  test.py  to_do.ipynb  vanaa_experiement.ipynb
